feat: doc for admin user controller
