# kurswahl/src/main/java/com/x7ubi/kurswahl/admin/user/controller/AdminStudentController.java
@@ -8,6 +8,12 @@ import com.x7ubi.kurswahl.admin.user.service.StudentCreationService;
 import com.x7ubi.kurswahl.admin.user.service.StudentCsvService;
 import com.x7ubi.kurswahl.common.error.ErrorMessage;
 import com.x7ubi.kurswahl.common.exception.EntityNotFoundException;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
@@ -33,98 +39,112 @@ public class AdminStudentController {
 
     @PostMapping("/student")
     @AdminRequired
+    @ResponseStatus(HttpStatus.CREATED)
+    @Operation(description = "Signing up new Student")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "201", description = "Signed up new Student"),
+            @ApiResponse(responseCode = "404", description = "StudentClass could not be found.", content =
+                    {@Content(mediaType = "application/json", schema =
+                    @Schema(implementation = String.class))})
+    })
     public ResponseEntity<?> createStudent(
             @RequestBody StudentSignupRequest studentSignupRequest
-    ) {
+    ) throws EntityNotFoundException {
         logger.info("Signing up new Student");
 
-        try {
-            this.studentCreationService.registerStudent(studentSignupRequest);
-            return ResponseEntity.status(HttpStatus.OK).build();
-        } catch (EntityNotFoundException e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
-        } catch (Exception e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ErrorMessage.INTERNAL_SERVER_ERROR);
-        }
+        this.studentCreationService.registerStudent(studentSignupRequest);
+        return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 
     @PutMapping("/student")
     @AdminRequired
+    @ResponseStatus(HttpStatus.OK)
+    @Operation(description = "Editing Student")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Edited Student"),
+            @ApiResponse(responseCode = "404", description = "StudentClass could not be found.", content =
+                    {@Content(mediaType = "application/json", schema =
+                    @Schema(implementation = String.class))}),
+            @ApiResponse(responseCode = "404", description = "Student could not be found.", content =
+                    {@Content(mediaType = "application/json", schema =
+                    @Schema(implementation = String.class))})
+    })
     public ResponseEntity<?> editStudent(
             @RequestParam Long studentId,
             @RequestBody StudentSignupRequest studentSignupRequest
-    ) {
+    ) throws EntityNotFoundException {
         logger.info("Editing Student");
 
-        try {
-            this.studentCreationService.editStudent(studentId, studentSignupRequest);
-            return ResponseEntity.status(HttpStatus.OK).build();
-        } catch (EntityNotFoundException e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
-        } catch (Exception e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ErrorMessage.INTERNAL_SERVER_ERROR);
-        }
+        this.studentCreationService.editStudent(studentId, studentSignupRequest);
+        return ResponseEntity.status(HttpStatus.OK).build();
     }
 
     @GetMapping("/student")
     @AdminRequired
-    public ResponseEntity<?> getStudent(
-            @RequestParam Long studentId
-    ) {
+    @ResponseStatus(HttpStatus.OK)
+    @Operation(description = "Getting Student")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Found Student", content =
+                    {@Content(mediaType = "application/json", schema = @Schema(implementation = StudentResponse.class))}),
+            @ApiResponse(responseCode = "404", description = "Student could not be found.", content =
+                    {@Content(mediaType = "application/json", schema =
+                    @Schema(implementation = String.class))})
+    })
+    public ResponseEntity<?> getStudent(@RequestParam Long studentId) throws EntityNotFoundException {
         logger.info("Getting Student");
 
-        try {
-            StudentResponse response = this.studentCreationService.getStudent(studentId);
-            return ResponseEntity.status(HttpStatus.OK).body(response);
-        } catch (EntityNotFoundException e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
-        } catch (Exception e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ErrorMessage.INTERNAL_SERVER_ERROR);
-        }
+        StudentResponse response = this.studentCreationService.getStudent(studentId);
+        return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
     @DeleteMapping("/student")
     @AdminRequired
-    public ResponseEntity<?> deleteStudent(
-            @RequestParam Long studentId
-    ) {
+    @ResponseStatus(HttpStatus.OK)
+    @Operation(description = "Deleting Student")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Deleted Student", content =
+                    {@Content(mediaType = "application/json",
+                            array = @ArraySchema(schema = @Schema(implementation = StudentResponse.class)))}),
+            @ApiResponse(responseCode = "404", description = "Student could not be found.", content =
+                    {@Content(mediaType = "application/json", schema =
+                    @Schema(implementation = String.class))})
+    })
+    public ResponseEntity<?> deleteStudent(@RequestParam Long studentId) throws EntityNotFoundException {
         logger.info("Deleting Student");
 
-        try {
-            List<StudentResponse> response = this.studentCreationService.deleteStudent(studentId);
-            return ResponseEntity.status(HttpStatus.OK).body(response);
-        } catch (EntityNotFoundException e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
-        } catch (Exception e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ErrorMessage.INTERNAL_SERVER_ERROR);
-        }
+        List<StudentResponse> response = this.studentCreationService.deleteStudent(studentId);
+        return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
     @GetMapping("/students")
     @AdminRequired
+    @ResponseStatus(HttpStatus.OK)
+    @Operation(description = "Getting all Students")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Found all Students", content =
+                    {@Content(mediaType = "application/json",
+                            array = @ArraySchema(schema = @Schema(implementation = StudentResponse.class)))})
+    })
     public ResponseEntity<?> getStudents() {
         logger.info("Getting all Students");
 
-        try {
-            List<StudentResponse> responses = this.studentCreationService.getAllStudents();
-            return ResponseEntity.status(HttpStatus.OK).body(responses);
-        } catch (Exception e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ErrorMessage.INTERNAL_SERVER_ERROR);
-        }
+        List<StudentResponse> responses = this.studentCreationService.getAllStudents();
+        return ResponseEntity.status(HttpStatus.OK).body(responses);
     }
 
 
     @DeleteMapping("/students")
     @AdminRequired
+    @ResponseStatus(HttpStatus.OK)
+    @Operation(description = "Deleting list of Students")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Deleted selected Students", content =
+                    {@Content(mediaType = "application/json",
+                            array = @ArraySchema(schema = @Schema(implementation = StudentResponse.class)))}),
+            @ApiResponse(responseCode = "404", description = "A student could not be found.", content =
+                    {@Content(mediaType = "application/json", schema =
+                    @Schema(implementation = String.class))})
+    })
     public ResponseEntity<?> deleteStudents(
             @RequestBody List<Long> studentIds
     ) {
@@ -144,16 +164,17 @@ public class AdminStudentController {
 
     @PostMapping("/csvStudents")
     @AdminRequired
+    @ResponseStatus(HttpStatus.CREATED)
+    @Operation(description = "Importing Students from csv file")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "201", description = "Created Students from csv", content =
+                    {@Content(mediaType = "application/json",
+                            array = @ArraySchema(schema = @Schema(implementation = StudentResponse.class)))})
+    })
     public ResponseEntity<?> importStudentsFromCsv(@RequestBody StudentCsvRequest studentCsvRequest) {
         logger.info("Importing Students from csv");
 
-
-        try {
-            List<StudentResponse> response = this.studentCsvService.importCsv(studentCsvRequest);
-            return ResponseEntity.status(HttpStatus.OK).body(response);
-        } catch (Exception e) {
-            logger.error(e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ErrorMessage.INTERNAL_SERVER_ERROR);
-        }
+        List<StudentResponse> response = this.studentCsvService.importCsv(studentCsvRequest);
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 }
